testsuite/tests/interpreter_errors/invalid_concats/test.out
script.lkql:1:7: error: Expected List but got Int
1 | print([] & 2)
  |       ^^^^^^

